[package]
name = "blinq"
version = "0.1.2"
description = "An embedded-hal blinking queue"
repository = "https://github.com/jamesmunns/blinq"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
readme = "README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies]
heapless = "0.5.5"
embedded-hal = "0.2.4"
