[package]
name = "nrf52-blink"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf52840-hal = "0.11"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
cortex-m-rt = "0.6.12"
panic-reset = "0.1.0"
blinq = { path = "../../" }
embedded-hal = "0.2.4"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
